unpackaged/main/default/objects/RICSC_Transaction__c/RICSC_Transaction__c.object-meta.xml
<CustomObject>
    <description>capture transaction information.</description>
    <label>Transaction</label>
    <nameField>
        <displayFormat>T-{000000000}</displayFormat>
        <label>Transaction</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Transactions</pluralLabel>
    <sharingModel>Private</sharingModel>
    <sharingReasons>
        <fullName>RICSC_VCASharingGolden__c</fullName>
        <label>VCA Sharing Golden</label>
    </sharingReasons>
    <sharingReasons>
        <fullName>RICSC_VCASharingLocal__c</fullName>
        <label>VCA Sharing Local</label>
    </sharingReasons>
</CustomObject>