unpackaged/main/default/objects/RICSC_Transaction__c/fields/RICSC_AmountPortal__c.field-meta.xml
<CustomField>
        <fullName>RICSC_AmountPortal__c</fullName>
        <description>Final (actual) price for the customer, with tax</description>
        <label>Amount(Portal)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </CustomField>