unpackaged/main/default/objects/RICSC_Transaction__c/fields/RICSC_AmountWithoutTax__c.field-meta.xml
<CustomField>
        <fullName>RICSC_AmountWithoutTax__c</fullName>
        <description>Final (actual) price for the customer, without tax</description>
        <label>Amount Without Tax</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </CustomField>