unpackaged/main/default/objects/RICSC_Transaction__c/fields/RICSC_AmountWithTax__c.field-meta.xml
<CustomField>
        <fullName>RICSC_AmountWithTax__c</fullName>
        <description>Total amount of the transaction coming from the source system</description>
        <label>Amount With Tax</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </CustomField>