unpackaged/main/default/objects/RICSC_Transaction__c/fields/RICSC_AmountWithTaxEUR__c.field-meta.xml
<CustomField>
        <fullName>RICSC_AmountWithTaxEUR__c</fullName>
        <description>Total amount of the transaction coming from the source system</description>
        <label>Amount With Tax EUR</label>
        <precision>16</precision>
        <scale>2</scale>
        <type>Currency</type>
    </CustomField>