unpackaged/main/default/objects/RICSC_Transaction__c/fields/RICSC_ArticleDescription__c.field-meta.xml
<CustomField>
        <fullName>RICSC_ArticleDescription__c</fullName>
        <description>Description of the product in the transaction</description>
        <label>Article Description</label>
        <length>255</length>
        <type>Text</type>
    </CustomField>