unpackaged/main/default/objects/RICSC_Transaction__c/fields/RICSC_Boutique__c.field-meta.xml
<CustomField>
        <fullName>RICSC_Boutique__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Link to the Boutique</description>
        <label>Boutique</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Transactions (Boutique)</relationshipLabel>
        <relationshipName>RICSC_TransactionsBoutique</relationshipName>
        <type>Lookup</type>
    </CustomField>