unpackaged/main/default/objects/RICSC_Transaction__c/fields/RICSC_Channel__c.field-meta.xml
<CustomField>
        <fullName>RICSC_Channel__c</fullName>
        <description>Field to categorize the channel through which the transaction was handled</description>
        <label>Transaction Channel</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <sorted>true</sorted>
                <value>
                    <fullName>Boutique</fullName>
                </value>
                <value>
                    <fullName>CC</fullName>
                </value>
                <value>
                    <fullName>Charity</fullName>
                </value>
                <value>
                    <fullName>Web</fullName>
                </value>
                <value>
                    <fullName>Wholesaler</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </CustomField>