unpackaged/main/default/objects/RICSC_Transaction__c/fields/RICSC_Collection__c.field-meta.xml
<CustomField>
        <fullName>RICSC_Collection__c</fullName>
        <description>Formula to retrieve Collection from Product</description>
        <formula>RICSC_ProductName__r.RICSC_CollectionProductLine__c</formula>
        <label>Collection</label>
        <type>Text</type>
    </CustomField>