unpackaged/main/default/objects/RICSC_Transaction__c/fields/RICSC_CurrencyKey__c.field-meta.xml
<CustomField>
        <fullName>RICSC_CurrencyKey__c</fullName>
        <description>Currency keycoming from the source system</description>
        <label>Currency Key</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>RICSC_Currency</valueSetName>
        </valueSet>
    </CustomField>