unpackaged/main/default/objects/RICSC_Transaction__c/fields/RICSC_CurrencyRateEUR__c.field-meta.xml
<CustomField>
        <fullName>RICSC_CurrencyRateEUR__c</fullName>
        <description>Currency rate used to convert a local amount to the EUR amounts</description>
        <label>Currency Rate EUR</label>
        <precision>12</precision>
        <scale>6</scale>
        <type>Number</type>
    </CustomField>