unpackaged/main/default/objects/RICSC_Transaction__c/fields/RICSC_DiscountTotalPortal__c.field-meta.xml
<CustomField>
        <fullName>RICSC_DiscountTotalPortal__c</fullName>
        <description>Applicable discount visible in portal, without tax</description>
        <label>Discount Total (Portal)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </CustomField>