unpackaged/main/default/objects/RICSC_Transaction__c/fields/RICSC_DiscountWithTax__c.field-meta.xml
<CustomField>
        <fullName>RICSC_DiscountWithTax__c</fullName>
        <description>Applicable discount value, with tax</description>
        <label>Discount With Tax</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </CustomField>