unpackaged/main/default/objects/RICSC_Transaction__c/fields/RICSC_Gift__c.field-meta.xml
<CustomField>
        <fullName>RICSC_Gift__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Indicates if the transaction was related to a gift</description>
        <label>Gift</label>
        <type>Checkbox</type>
    </CustomField>