unpackaged/main/default/objects/RICSC_Transaction__c/fields/RICSC_GoldenRecord__c.field-meta.xml
<CustomField>
        <fullName>RICSC_GoldenRecord__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Lookup to a Golden Record which has been created for the Account - Release 1 SC</description>
        <label>Golden Record</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Transactions</relationshipLabel>
        <relationshipName>RICSC_TransactionsGoldenRecord</relationshipName>
        <type>Lookup</type>
    </CustomField>