unpackaged/main/default/objects/RICSC_Transaction__c/fields/RICSC_Gratuity__c.field-meta.xml
<CustomField>
        <fullName>RICSC_Gratuity__c</fullName>
        <description>Indicates if the product was given as gratuity</description>
        <formula>OR(RICSC_AmountWithTax__c=0,RICSC_DiscountTotalPortal__c=100)</formula>
        <label>Gratuity</label>
        <type>Checkbox</type>
    </CustomField>