unpackaged/main/default/objects/RICSC_Transaction__c/fields/RICSC_MaterialArticle__c.field-meta.xml
<CustomField>
        <fullName>RICSC_MaterialArticle__c</fullName>
        <description>Material/Article from the source system</description>
        <label>Article</label>
        <length>100</length>
        <type>Text</type>
    </CustomField>