unpackaged/main/default/objects/RICSC_Transaction__c/fields/RICSC_PercentageDiscount__c.field-meta.xml
<CustomField>
        <fullName>RICSC_PercentageDiscount__c</fullName>
        <description>Percentage of discount given to the customer</description>
        <formula>100 * RICSC_DiscountWithTax__c / (RICSC_AmountWithTax__c + RICSC_DiscountWithTax__c)</formula>
        <label>Percentage Discount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </CustomField>