unpackaged/main/default/objects/RICSC_Transaction__c/fields/RICSC_ProductName__c.field-meta.xml
<CustomField>
        <fullName>RICSC_ProductName__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Link to the Product</description>
        <label>Product Name</label>
        <referenceTo>Product2</referenceTo>
        <relationshipLabel>Product Names</relationshipLabel>
        <relationshipName>RICSC_ProductNames</relationshipName>
        <type>Lookup</type>
    </CustomField>