unpackaged/main/default/objects/RICSC_Transaction__c/fields/RICSC_QuantityPortal__c.field-meta.xml
<CustomField>
        <fullName>RICSC_QuantityPortal__c</fullName>
        <description>Quantity (Portal)coming from the source system</description>
        <label>Quantity (Portal)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </CustomField>