unpackaged/main/default/objects/RICSC_Transaction__c/fields/RICSC_SerialNumber__c.field-meta.xml
<CustomField>
        <fullName>RICSC_SerialNumber__c</fullName>
        <description>Serial Number of the product in the transaction</description>
        <label>Serial Number</label>
        <length>50</length>
        <type>Text</type>
    </CustomField>