unpackaged/main/default/objects/RICSC_Transaction__c/fields/RICSC_TotalRetailSalesPriceWithoutTax__c.field-meta.xml
<CustomField>
        <fullName>RICSC_TotalRetailSalesPriceWithoutTax__c</fullName>
        <description>Total Retail Sales Price Without Taxcoming from the source system</description>
        <label>Total Retail Sales Price Without Tax</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </CustomField>