unpackaged/main/default/objects/RICSC_Transaction__c/fields/RICSC_TotalRetailSalesPriceWithTax__c.field-meta.xml
<CustomField>
        <fullName>RICSC_TotalRetailSalesPriceWithTax__c</fullName>
        <description>Total Retail Sales Price With Taxcoming from the source system</description>
        <label>Total Retail Sales Price With Tax</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </CustomField>