unpackaged/main/default/objects/RICSC_Transaction__c/fields/RICSC_TransactionCategory__c.field-meta.xml
<CustomField>
        <fullName>RICSC_TransactionCategory__c</fullName>
        <description>Field to categorize a transaction of a certain type as Repair, Return, Sale</description>
        <label>Transaction Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <sorted>true</sorted>
                <value>
                    <fullName>Repair</fullName>
                </value>
                <value>
                    <fullName>Return</fullName>
                </value>
                <value>
                    <fullName>Sale</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </CustomField>