unpackaged/main/default/objects/RICSC_Transaction__c/fields/RICSC_TransactionDate__c.field-meta.xml
<CustomField>
        <fullName>RICSC_TransactionDate__c</fullName>
        <description>Transaction Date in external system</description>
        <label>Transaction Date</label>
        <type>Date</type>
    </CustomField>