unpackaged/main/default/objects/RICSC_Transaction__c/fields/RICSC_TransactionNumber__c.field-meta.xml
<CustomField>
        <fullName>RICSC_TransactionNumber__c</fullName>
        <description>Transaction Number in external system</description>
        <label>Transaction Number</label>
        <length>100</length>
        <type>Text</type>
    </CustomField>