unpackaged/main/default/objects/RICSC_Transaction__c/fields/RICSC_TransactionStatus__c.field-meta.xml
<CustomField>
        <fullName>RICSC_TransactionStatus__c</fullName>
        <description>Transaction Status in external system</description>
        <label>Transaction Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <sorted>true</sorted>
                <value>
                    <fullName>Temp</fullName>
                </value>
                <value>
                    <fullName>Temp2</fullName>
                </value>
                <value>
                    <fullName>Temp3</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </CustomField>