unpackaged/main/default/objects/RICSC_Transaction__c/fields/RICSC_TransactionTypeFromSourceSystem__c.field-meta.xml
<CustomField>
        <fullName>RICSC_TransactionTypeFromSourceSystem__c</fullName>
        <description>Transaction Type in external system</description>
        <label>Transaction Type from Source System</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <sorted>true</sorted>
                <value>
                    <fullName>100</fullName>
                    <label>Cancellation</label>
                </value>
                <value>
                    <fullName>30</fullName>
                    <label>Cass</label>
                </value>
                <value>
                    <fullName>40_MEXBRA</fullName>
                    <label>CASS Repairs</label>
                </value>
                <value>
                    <fullName>250_MEXBRA</fullName>
                    <label>CASS Spare parts</label>
                </value>
                <value>
                    <fullName>ZR01</fullName>
                    <label>Client Order</label>
                </value>
                <value>
                    <fullName>ZR02</fullName>
                    <label>Client Reservation</label>
                </value>
                <value>
                    <fullName>ZR32</fullName>
                    <label>Consignment Sale</label>
                </value>
                <value>
                    <fullName>120_MEXBRA</fullName>
                    <label>Credit Value Only (MIA)</label>
                </value>
                <value>
                    <fullName>300_MEXBRA</fullName>
                    <label>CR PH</label>
                </value>
                <value>
                    <fullName>150_MEXBRA</fullName>
                    <label>CR Return-Commercial exchange</label>
                </value>
                <value>
                    <fullName>190_MEXBRA</fullName>
                    <label>CR Return-Mis-shipment</label>
                </value>
                <value>
                    <fullName>CS</fullName>
                    <label>Customer Service</label>
                </value>
                <value>
                    <fullName>CSX</fullName>
                    <label>Customer Service Migrated</label>
                </value>
                <value>
                    <fullName>110</fullName>
                    <label>Deposit</label>
                </value>
                <value>
                    <fullName>ZE21</fullName>
                    <label>ECOM Credit Memo Req</label>
                </value>
                <value>
                    <fullName>ZE12</fullName>
                    <label>ECOM Exchange Dwngr</label>
                </value>
                <value>
                    <fullName>ZE13</fullName>
                    <label>ECOM Exchange Upgr</label>
                </value>
                <value>
                    <fullName>ZE03</fullName>
                    <label>ECOM FOC Order</label>
                </value>
                <value>
                    <fullName>310_MEXBRA</fullName>
                    <label>e-commerce sales</label>
                </value>
                <value>
                    <fullName>320_MEXBRA</fullName>
                    <label>e-commerce sales return</label>
                </value>
                <value>
                    <fullName>ZE01</fullName>
                    <label>ECOM Phone Order</label>
                </value>
                <value>
                    <fullName>ZE10</fullName>
                    <label>ECOM Ret.Ord.cutover</label>
                </value>
                <value>
                    <fullName>ZE11</fullName>
                    <label>ECOM Return Order</label>
                </value>
                <value>
                    <fullName>ZE14</fullName>
                    <label>ECOM Return Retail</label>
                </value>
                <value>
                    <fullName>ZE02</fullName>
                    <label>ECOM Web Order</label>
                </value>
                <value>
                    <fullName>90</fullName>
                    <label>Gift</label>
                </value>
                <value>
                    <fullName>50_MEXBRA</fullName>
                    <label>Gratuities</label>
                </value>
                <value>
                    <fullName>ZEX1</fullName>
                    <label>Hist. Phone Order</label>
                </value>
                <value>
                    <fullName>ZEX2</fullName>
                    <label>Hist. Web Order</label>
                </value>
                <value>
                    <fullName>40</fullName>
                    <label>In Account</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </CustomField>