unpackaged/main/default/objects/RICSC_Transaction__c/fields/RICSC_UnitOfMeasure__c.field-meta.xml
<CustomField>
        <fullName>RICSC_UnitOfMeasure__c</fullName>
        <description>Unit of measure coming from the source system</description>
        <label>Unit Of Measure</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>RICSC_UnitOfMeasure</valueSetName>
        </valueSet>
    </CustomField>