unpackaged/main/default/objects/RICSC_Transaction__c/fields/RICSC_VIP__c.field-meta.xml
<CustomField>
        <fullName>RICSC_VIP__c</fullName>
        <defaultValue>false</defaultValue>
        <description>It identifies if the Record is VIP or not . It is recalculated at the GR record level based on Maisons' rules</description>
        <label>VIP</label>
        <type>Checkbox</type>
    </CustomField>