unpackaged/main/default/objects/RICSC_Transaction__c/listViews/VCA_Transactions.listView-meta.xml
<ListView>
        <fullName>VCA_Transactions</fullName>
        <columns>NAME</columns>
        <columns>RICSC_AmountWithTax__c</columns>
        <columns>RICSC_AmountWithTaxEUR__c</columns>
        <columns>RICSC_AmountWithoutTax__c</columns>
        <columns>RICSC_Maison__c</columns>
        <columns>RICSC_AmountPortal__c</columns>
        <columns>RICSC_MaterialArticle__c</columns>
        <columns>RICSC_Boutique__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>RICSC_Maison__c</field>
            <operation>equals</operation>
            <value>Van Cleef &amp; Arpels</value>
        </filters>
        <label>VCA Transactions</label>
    </ListView>